<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.tokioschool</groupId>
	<artifactId>flight-app</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>flight-app</name>
	<description>Flight App para tokioschool</description>

	<modules>
		<module>file-store-api</module>
		<module>flight-web</module>
	</modules>

	<packaging>pom</packaging>

	<properties>
		<java.version>22</java.version>
		<maven.compiler.source>22</maven.compiler.source>
		<maven.compiler.target>22</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<springboot.version>3.3.2</springboot.version>
		<spring-boot-maven-plugin.version>3.2.2</spring-boot-maven-plugin.version>
		<commons-lang3.version>3.12.0</commons-lang3.version>
		<tsid-creator.version>5.2.5</tsid-creator.version>
		<boostrap.version>5.3.3</boostrap.version>
		<boostrap-icons.verson>1.11.3</boostrap-icons.verson>
		<webjars-locator>0.50</webjars-locator>
		<jquery.version>3.7.1</jquery.version>
		<modelmapper.version>3.2.0</modelmapper.version>
		<spring-icu.version>0.3.0</spring-icu.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${springboot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- para gestionar las dependneicas de los módulos internos,
			esto nos ahorra indicar la version cuando se añada en el pom de un modulo interno, entre otras  cosas -->
			<dependency>
				<groupId>com.tokioschool</groupId>
				<artifactId>file-store-api</artifactId>
				<version>${version}</version>
			</dependency>

			<dependency>
				<groupId>com.tokioschool</groupId>
				<artifactId>flight-web</artifactId>
				<version>${version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<!-- external to spring dependencies -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- mapper: https://modelmapper.org/downloads/ -->
		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>${modelmapper.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
	</dependencies>

	<repositories>
		<!-- for use icu -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>



	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
						<arg>-Xlint:all</arg>
						<rg>-parameters</rg>
						<arg>--enable-preview</arg>
					</compilerArgs>
                </configuration>
            </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
